--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero-content reveal">
             <p class="hero-kicker">Kanpur's Mega Music Event</p>
             <h1 class="hero-title">AURA FESTIVAL</h1>
-            <p class="hero-meta">14–15 FEB 2026 • FOOLBAGH GROUND</p>
+            <p class="hero-meta">14–15 FEB 2026 • PHOOLBAGH GROUND</p>
             <div class="hero-actions">
                 <a href="#lineup" class="btn btn-primary">Enter The Aura</a>
             </div>
@@ -55,7 +55,7 @@
                     <div class="lineup-details">
                         <div class="lineup-time"> 6 PM - 12 AM</div>
                         <ul class="lineup-list">
-                            <li><strong>Main Act:</strong> International Female DJ (TBA)</li>
+                            <li><strong>Main Act:</strong> International DJ (TOMORROWLAND PERFORMED) (TBA)</li>
                             <li><strong>Support:</strong> Russian Performance Art</li>
                             <li><strong>Feature:</strong> 360° Laser Show</li>
                         </ul>
@@ -158,7 +158,6 @@
                     <i class="fas fa-phone-alt text-gold" style="font-size: 1.5rem; margin-bottom: 10px;"></i>
                     <p class="muted">Call Us</p>
                     <h4 style="color: #fff;">+91 8424892018</h4>
-                    <h5 style="color: #fff;">+91 8424892018</h5>
                 </a>
                 <a href="https://www.instagram.com/aura.fest2026" target="_blank" class="glass contact-card">
                     <i class="fab fa-instagram text-gold" style="font-size: 1.5rem; margin-bottom: 10px;"></i>
@@ -179,15 +178,15 @@
                     <input type="text" placeholder="Your Name" required>
                     <input type="email" placeholder="Email Address" required>
                     <select>
-                        <option>Sponsor Inquiry</option>
-                        <option>Investor Inquiry</option>
+                        <option>Sponsor Enquiry</option>
+                        <option>Investor Enquiry</option>
                         <option>Stall Booking</option>
                         <option>General Query</option>
                     </select>
                 </div>
                 <textarea placeholder="Write your message..." rows="4"></textarea>
                 <button type="submit" class="btn btn-primary" id="submitBtn">Send Message</button>
-                <p id="successMessage" class="success">✓ Message Sent to g.aryan4199@gmail.com</p>
+                <p id="successMessage" class="success">✓ Message Sent to studiorajika7@gmail.com</p>
             </form>
         </div>
     </section>
